<resources>

    <string name="app_name">Memory Game</string>

    <string name="dummy">Dummy</string>
    <string name="start_game">Start Game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sound">Sound</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="language">Language</string>
    <string name="won">Win</string>
    <string name="lose">Lose</string>
    <string name="attempts">Attempts</string>
    <string name="configurations">Configurations</string>
    <string name="dashboard">Dashboard</string>
    <string name="success_0">Success: 0</string>
    <string name="failures_0">Failures: 0</string>
    <string name="new_game">New Game</string>
    <string name="game_finished">Game Finished</string>

</resources>