<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="callback"
            type="com.ehaque.ui.base.BaseCallback" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_above="@+id/llButtons"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_app_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/_30sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartGame"
                style="@style/CustomButton"
                android:background="@drawable/bg_round_filled_green_25sdp"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:text="@string/start_game"
                android:textAllCaps="true"
                android:textColor="@color/color_white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStatistics"
                style="@style/CustomButton"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_round_filled_green_25sdp"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:text="@string/statistics"
                android:textAllCaps="true"
                android:textColor="@color/color_white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSettings"
                style="@style/CustomButton"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_round_filled_green_25sdp"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textColor="@color/color_white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</layout>
